# mlops-tryops

./: .dockerignore  .env.example  .gitignore  .trivyignore  README.md  TECHNICAL_DOCUMENTATION.md  pyproject.toml  run.sh  test_api.py
.github/workflows/: README.md  cd.yml  ci.yml
container_imgs/: Dockerfile.api  Dockerfile.train  README.md  docker-compose.yml  prometheus.yml
data/: .gitkeep
infra/: INFRASTRUCTURE_DOCUMENTATION.md  aws_eks_addons.tf  aws_eks_cluster.tf  aws_eks_iam.tf  aws_eks_node_groups.tf  aws_iam_ga_runners.tf  aws_iam_logs.tf  aws_img_registry.tf  aws_storage_bucket.tf  aws_vpc.tf  github_integration.tf  helm_api.tf  helm_training.tf  kubernetes_admission_control.tf  kubernetes_namespace.tf  locals.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
infra/github_infra/: .gitignore  README.md  github_pat_script.sh  github_secrets.tf  github_variables.tf  variables.tf
scripts/: generate_dummy_data.py
src/: __init__.py
src/api/: dependencies.py  main.py  middleware.py
src/monitoring/: __init__.py  drift_detector.py  drift_service.py  metrics.py  prediction_logger.py
src/train/: __init__.py  baseline_generator.py  feature_baseline_generator.py  prediction_baseline_generator.py  schema_generator.py  train.py
tests/: __init__.py  conftest.py  test_critical_fixes.py  test_drift_detector.py  test_drift_detector_extended.py  test_drift_service.py  test_main.py  test_model_loader.py  test_model_storage.py  test_prediction_logger.py  test_s3_operations.py  test_schema_generator.py  test_serving_pointer.py  test_train.py
(+17 files in other folders)
