[project]
name = "try-ops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.30",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "logging>=0.4.9.6",
    "numpy>=2.4.1",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pathlib>=1.0.1",
    "prometheus-client>=0.24.1",
    "protobuf>=6.33.5",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "skl2onnx>=1.19.1",
    "slowapi>=0.1.9",
    "tenacity>=9.1.2",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
]

[tool.mypy]
ignore_missing_imports = true
